# stage_web_tests

./: .gitignore  conftest.py  pyproject.toml  requirements.txt
base_page/: page_autorization.py  page_autorization_number.py  page_register_mail.py  page_register_number.py
helpers/: autorization_number.py  autorization_number_and_mail.py
test_profile/: test_add_colection.py  test_profile_setting.py
tests_reg/: test_autorization_mail.py  test_autorization_number.py  test_registration_mail.py  test_registration_number.py
